--- a/include/footer.html
+++ b/include/footer.html
@@ -56,11 +56,11 @@
 </div>
 
 <style>
-.footer { position: relative;padding-top: 150px;padding-bottom: 100px;background-color: #282828;color: #696969; }
-.footer .logo_img { display: block;width: 200px; height:45px;background: url(../img/common/logo_g.png) no-repeat center center / contain;font-size: 1px;color:transparent; }
+.footer { position: relative;padding-top: 150px;padding-bottom: 100px;background-color: #282828;color: #929292; }
+.footer .logo_img { display: block;width: 200px; height:45px;background: url(./img/common/logo_g.png) no-repeat center center / contain;font-size: 1px;color:transparent; }
 .foot_top { padding-bottom:30px;border-bottom: 1px solid #696969 }
 .foot_bot { padding-top:30px;font-size: 0.7rem; font-family: "Pretendard-Light"; }
-.foot_bot p { margin-bottom: 0.7em;}
+.foot_bot p { margin-bottom: 0.7em;letter-spacing: 0;}
 .foot_bot .left { color: #ffffff; }
 .foot_bot .right { width: auto;text-align: right; }
 .footer .tel {display: block; font-size: 1.75rem;margin-bottom: 0.5em; }
