--- a/include/header.html
+++ b/include/header.html
@@ -66,9 +66,9 @@
 
 .header.on { background-color: #ffffff; }
 .header.on .header_in{ color: var(--primary2); }
-.header.on .logo_img { background-image: url(./img/common/logo_p.png); }
+.header.on .logo_img { background-image: url(./img/common/logo_p2.png); }
 .header.on .depth2 { border-top: 1px solid #633d8c30; }
-.header .gnb .depth1 ul{ display: flex;justify-content: center;align-items: center; gap: 20px;height: 140px;font-size: 0.9rem;} 
+.header .gnb .depth1 ul{ display: flex;justify-content: center;align-items: center; gap: 15px;height: 140px;font-size: 0.9rem;} 
 .header .gnb .depth1 li { 
   position: relative;
   height: 100%;display: flex;justify-content: center;align-items: center;
